Modals now have a transparent overlay behind them * The main content is no longer hidden when on mobile and a modal is visible

--- a/html/react/src/pages/BackgroundSelectionModal/BackgroundSelectionModal.module.scss
+++ b/html/react/src/pages/BackgroundSelectionModal/BackgroundSelectionModal.module.scss
@@ -1,11 +1,13 @@
 @import '../../vars'; 
 
 .mainContainer {
-  	width: 100%;
-	min-height: 100%;
 	display: flex;
-	flex-flow: column nowrap;
-
+    flex-flow: column nowrap;
+    max-width: 90rem;
+	flex: 1;
+	
+	width: 100%;
+  	min-height: 100%;
 	background: $purple200;
 
 	h1, h2 {
@@ -23,20 +25,7 @@
 .backgroundTable {
 	width: 100%;
 	padding: 0 1rem 1rem;
-
-	@media(max-width: 768px) {
-		@media (orientation: portrait) {
-			min-height: 100%;
-			align-items: flex-start;
-			> * {
-		        flex: 0 0 100%;
-			}
-		}
-	}
-
-	@media(min-width: 768px) {
-		min-height: 100%;
-	}
+	background: $purple200;
 }
 
 .cardContainer {
