--- a/html/react/src/pages/TemplateSelectionModal/TemplateSelectionModal.module.scss
+++ b/html/react/src/pages/TemplateSelectionModal/TemplateSelectionModal.module.scss
@@ -1,9 +1,15 @@
 @import '../../vars';
 
 .mainContainer {
+    display: flex;
+    flex-flow: column nowrap;
+    max-width: 90rem;
+	flex: 1;
+	
 	width: 100%;
   	min-height: 100%;
 	background: $purple200;
+
 	h1, h2 {
 		text-align: center;
 		font-size: 1.5rem;
@@ -11,23 +17,10 @@
 	}
 }
 
-.templateTable {
-	display: flex;
-	flex-flow: row wrap;
-	justify-content: space-evenly;
-
-	> * {
-		max-width: 90%;
-	}
+.templatesContainer {
+	background: $purple200;
 }
 
-.templateTable .templateWidget {
-	text-align: center;
-	img {
-		max-width: 100%;
-		border: 5px solid transparent;
-	}
-}
 
 .noTemplatesMessage {
 	padding: 1rem;
