--- a/html/react/src/widgets/GameContainer/GameContainer.module.scss
+++ b/html/react/src/widgets/GameContainer/GameContainer.module.scss
@@ -11,7 +11,7 @@
 	bottom: 0;
 	right: 0;
 
-	z-index: 9999;
+	z-index: 99;
 
 	justify-content: center;
 	overflow: hidden;
